--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.11.0",
     "ember-export-application-global": "^1.0.5",
+    "ember-leaflet": "^3.0.11",
     "ember-load-initializers": "^0.6.0",
     "ember-resolver": "^2.0.3",
     "ember-source": "~2.11.0",
     "ember-welcome-page": "^2.0.2",
+    "leaflet": "^1.0.3",
     "loader.js": "^4.0.10"
   },
   "engines": {
