--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "test": "ember test"
   },
   "devDependencies": {
+    "bootstrap": "^3.3.7",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
+    "ember-bootstrap": "^1.0.0-alpha.11",
     "ember-cli": "2.11.1",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-babel": "^5.1.7",
@@ -25,6 +27,7 @@
     "ember-cli-htmlbars-inline-precompile": "^0.3.6",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-jshint": "^2.0.1",
+    "ember-cli-less": "^1.5.4",
     "ember-cli-qunit": "^3.0.1",
     "ember-cli-release": "^0.2.9",
     "ember-cli-shims": "^1.0.2",
@@ -33,6 +36,7 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.11.0",
     "ember-export-application-global": "^1.0.5",
+    "ember-font-awesome": "^3.0.5",
     "ember-leaflet": "^3.0.11",
     "ember-load-initializers": "^0.6.0",
     "ember-resolver": "^2.0.3",
