Premiere partie de web. Problèmes pour mettre au millieu du map. Il recupère les données de dbpedia

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
     "ember-bootstrap": "^1.0.0-alpha.11",
+    "ember-browserify": "^1.1.13",
     "ember-cli": "2.11.1",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-babel": "^5.1.7",
@@ -43,7 +44,8 @@
     "ember-source": "~2.11.0",
     "ember-welcome-page": "^2.0.2",
     "leaflet": "^1.0.3",
-    "loader.js": "^4.0.10"
+    "loader.js": "^4.0.10",
+    "osmtogeojson": "^3.0.0-beta.0"
   },
   "engines": {
     "node": ">= 0.12.0"
